trunk/Archive2/a9/7620de7c45a34e/output
main.cpp:3:43: error: expected template-name before '<' token
 template < typename T > struct A: public B< T >, public Z {
                                           ^
main.cpp:3:43: error: expected '{' before '<' token
main.cpp:3:43: error: expected unqualified-id before '<' token
main.cpp:22:2: error: extra ';' [-Wpedantic]
 };
  ^
